--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
-django
-gunicorn
-whitenoise
-psycopg2-binary
-requests
-urllib3
-django-environ
+asgiref==3.7.2
+binarytree==6.5.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+coverage==7.3.1
+Django==4.2.4
+django-cors-headers==4.3.1
+django-environ==0.11.2
+graphviz==0.20.1
+gunicorn==21.2.0
+idna==3.4
+packaging==21.3
+peppercorn==0.6
+psycopg2-binary==2.9.7
+pyparsing==3.0.9
+requests==2.31.0
+sampleproject==2.0.0
+setuptools-scm==7.0.5
+sqlparse==0.4.4
+tomli==2.0.1
+typing_extensions==4.4.0
+tzdata==2023.3
+urllib3==2.0.4
+whitenoise==6.5.0
